Fix z-index issues for detailOverlay and Bootstrap modal in liff-scan page

--- a/_styles/main.scss
+++ b/_styles/main.scss
@@ -192,7 +192,7 @@ body {
         width: 100%;
         height: 100%;
         background: white;
-        z-index: 2000;
+        z-index: 1;
         overflow-y: auto;
         display: none;
         padding: 20px;
